Fixed image with caption centre alignment.

--- a/style.less
+++ b/style.less
@@ -1221,6 +1221,11 @@ article.page{
 		.box-sizing(border-box);
 
 		text-align: center;
+
+		&.aligncenter {
+			margin-left: auto;
+			margin-right: auto;
+		}
 	}
 
 	.wp-caption:first-child{
